force-app/main/default/objects/SPEN_Defect__c/SPEN_Defect__c.object-meta.xml
<CustomObject>
    <label>Defect</label>
    <nameField>
        <displayFormat>D-{00}</displayFormat>
        <label>Defect Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Defects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>