force-app/main/default/objects/SPEN_Defect__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SPD</fullName>
            </value>
            <value>
                <fullName>SPM</fullName>
            </value>
            <value>
                <fullName>SPT</fullName>
            </value>
            <value>
                <fullName>DCC</fullName>
            </value>
            <value>
                <fullName>Incident Control</fullName>
                <label>IC</label>
            </value>
            <value>
                <fullName>LoV</fullName>
                <isActive>false</isActive>
                <label>LoV</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>