force-app/main/default/objects/SPEN_Defect__c/fields/SPEN_DefectType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_DefectType__c</fullName>
    <label>Defect Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cable Depth Not Indicated</fullName>
            </value>
            <value>
                <fullName>Ground Clearance Not Indicated</fullName>
            </value>
            <value>
                <fullName>Missing Form</fullName>
            </value>
            <value>
                <fullName>Missing Photos</fullName>
            </value>
            <value>
                <fullName>No Description of Third Party Works</fullName>
            </value>
            <value>
                <fullName>No Location provided on damage report</fullName>
            </value>
            <value>
                <fullName>No Name/Tel of Third Party who assessed damage</fullName>
            </value>
            <value>
                <fullName>No Photographs Available</fullName>
            </value>
            <value>
                <fullName>No Photographs on Damage Form</fullName>
            </value>
            <value>
                <fullName>No Repair Detail on Sketch</fullName>
            </value>
            <value>
                <fullName>Poor Quality Photos</fullName>
            </value>
            <value>
                <fullName>Third Party Details Insufficient</fullName>
            </value>
            <value>
                <fullName>Unanswered Precautionary Questions</fullName>
            </value>
            <value>
                <fullName>Incorrect Location / Coordinates</fullName>
            </value>
            <value>
                <fullName>No Coordinates</fullName>
            </value>
            <value>
                <fullName>Late Coordinates</fullName>
            </value>
            <value>
                <fullName>Coordinates in wrong category</fullName>
            </value>
            <value>
                <fullName>Coordinates added to job, but works not imminent or taking place</fullName>
            </value>
            <value>
                <fullName>Resources incorrectly cancelled</fullName>
            </value>
            <value>
                <fullName>Duplicate case / request / job reference</fullName>
            </value>
            <value>
                <fullName>Description of works / TM insufficient</fullName>
            </value>
            <value>
                <fullName>Missing contact information</fullName>
            </value>
            <value>
                <fullName>No/insufficient reason for early start documented</fullName>
            </value>
            <value>
                <fullName>No plan attached</fullName>
            </value>
            <value>
                <fullName>Notice requested but RON not required</fullName>
            </value>
            <value>
                <fullName>Incorrect Notice type / Duration of works requested</fullName>
            </value>
            <value>
                <fullName>Contractor issue</fullName>
            </value>
            <value>
                <fullName>No Permit Condition Check Sheet attached</fullName>
            </value>
            <value>
                <fullName>Webform / TM does not match permit checklist</fullName>
            </value>
            <value>
                <fullName>Permit Condition Checklist in incorrect format</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>