force-app/main/default/objects/SPEN_Defect__c/fields/SPEN_Description__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Description__c</fullName>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>