force-app/main/default/objects/SPEN_Defect__c/fields/SPEN_District__c.field-meta.xml
<CustomField>
    <fullName>SPEN_District__c</fullName>
    <formula>Case__r.SPEN_DistrictZone__r.SPEN_Zone_District_Formula__c</formula>
    <label>District</label>
    <type>Text</type>
</CustomField>