force-app/main/default/objects/SPEN_Defect__c/fields/SPEN_Process__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Process__c</fullName>
    <description>This will get the Case record type name</description>
    <formula>Case__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Process</label>
    <type>Text</type>
</CustomField>