force-app/main/default/objects/SPEN_Defect__c/fields/SPEN_ResponsibleEmployeeDCCIC__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ResponsibleEmployeeDCCIC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible Employee</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>SPEN Agent</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Defects</relationshipName>
    <type>Lookup</type>
</CustomField>