force-app/main/default/objects/SPEN_Defect__c/fields/SPEN_ResponsibleEmployeeFieldAgent__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ResponsibleEmployeeFieldAgent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Responsible Employee</label>
    <referenceTo>SPEN_Employee__c</referenceTo>
    <relationshipLabel>Defects</relationshipLabel>
    <relationshipName>Defects</relationshipName>
    <type>Lookup</type>
</CustomField>