force-app/main/default/objects/SPEN_Defect__c/fields/SPEN_ResponsibleEmployeeName__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ResponsibleEmployeeName__c</fullName>
    <formula>SPEN_ResponsibleEmployeeFieldAgent__r.SPEN_FirstName__c &amp;&apos; &apos;&amp; SPEN_ResponsibleEmployeeFieldAgent__r.SPEN_LastName__c</formula>
    <label>Responsible Employee Name</label>
    <type>Text</type>
</CustomField>