force-app/main/default/objects/SPEN_Defect__c/fields/SPEN_WorkLocationDefect__c.field-meta.xml
<CustomField>
    <fullName>SPEN_WorkLocationDefect__c</fullName>
    <description>This will get the work location pick list values from case object</description>
    <formula>TEXT(Case__r.SPEN_WorkLocation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Location</label>
    <type>Text</type>
</CustomField>