force-app/main/default/objects/SPEN_Defect__c/recordTypes/SPEN_StreetworksNRSWADefect.recordType-meta.xml
<RecordType>
    <fullName>SPEN_StreetworksNRSWADefect</fullName>
    <active>true</active>
    <label>Streetworks / NRSWA</label>
</RecordType>