force-app/main/default/objects/SPEN_Defect__c/recordTypes/SPEN_ThirtdPartyDamageDefect.recordType-meta.xml
<RecordType>
    <fullName>SPEN_ThirtdPartyDamageDefect</fullName>
    <active>true</active>
    <label>Third Party Damage</label>
</RecordType>