force-app/main/default/objects/SPEN_Defect__c/validationRules/SPEN_DCCIncident_Control.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_DCCIncident_Control</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(ISPICKVAL( Department__c  ,&quot;DCC&quot;),
ISPICKVAL( Department__c , &quot;Incident Control&quot; )),
NOT (ISBLANK( SPEN_ResponsibleEmployeeFieldAgent__c ))
)</errorConditionFormula>
    <errorDisplayField>Department__c</errorDisplayField>
    <errorMessage>If Department is DCC/Incident Control, Please clear previous Responsible Employee value by selecting Department as SPD/SPM</errorMessage>
</ValidationRule>