force-app/main/default/objects/SPEN_Defect__c/validationRules/SPEN_SPDSPM.validationRule-meta.xml
<ValidationRule>
    <fullName>SPEN_SPDSPM</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(ISPICKVAL( Department__c  ,&quot;SPD&quot;),
ISPICKVAL( Department__c , &quot;SPM&quot; )),
NOT (ISBLANK( SPEN_ResponsibleEmployeeDCCIC__c ))
)</errorConditionFormula>
    <errorDisplayField>Department__c</errorDisplayField>
    <errorMessage>If Department is SPD/SPM, Please clear previous Responsible Employee value by selecting Department as DCC/Incident Control</errorMessage>
</ValidationRule>